# codingprojects

./: Monte Carlo 2016 election simulation.py  air bnb data fun
2012:2016 election analysis/: ElectionPolling analysis.Rmd  analysis.Rmd
2020 election prediction, swing states analysis( R)/: combinedSwingstate.csv  swing states predictions.Rmd  swing states predictions.html
Bombing : Women data analysis (R)/: analysis.htm
SEC campaign donations, mySQL/: Project1_Convert 2.py  README1  tabelDeclarations.sql
Snap data:product analysis/: ReadMe
UN Voting analysis (R)/: un-voting (6).Rmd
US2016 county election anaylsis/: election2016.Rmd
Voting Database, mySQL/: ReadME  voter2.sql
calendar project (C++ )/: CMakeLists.txt  CalTest.cpp  Calendar.cpp  Calendar.h  Date.h  RemNode.h  Reminder.cpp  Reminder.h
immigration attitudes data analysis/: immigration.Rmd  immigration.htm
projectile simulation (python)/: N-body simulation.py  animation.py  particles in a box simulation.py  projectile trajectory simulation.py
texttwist project (C++)/: CMakeLists.txt  TextTwist.cpp  TextTwist.h  TextTwistDriver.cpp  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h  project10
